[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/entity",
    "crates/migration",
    "crates/server",
    "crates/test"
]
default-members = ["crates/cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.7", features = ["chrono", "decimal", "tracing"] }
async-trait = "0.1.73"
chrono = { version = "0.4.26" }
dotenv = "0.15.0"
pxid = { version = "0.3", features = ["async-graphql"] }
rust-argon2 = "1"
sea-orm = "0.12.1"
sea-orm-cli = { version = "0.12.3", default-features = false }
sea-orm-migration = "0.12.1"
serde = { version = "1.0.190" }
serde_json = { version = "1.0.104" }
thiserror = "1.0.38"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.15"
url = { version = "2.4.1", features = ["serde"] }
