[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "libcli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.3.11", features = ["std", "derive", "env"] }
sea-orm-cli = { version = "0.11.3", default-features = false, features = [ "codegen", "runtime-tokio-rustls" ] }

# Workspace Dependencies
dotenv = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Local Dependencies
core = { path = "../core" }
migration = { path = "../migration" }
server = { path = "../server" }

[dev-dependencies]
serde_json = { workspace = true }
