[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "townhall_client"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["js-sys", "wasmbind"] }
graphql_client = { workspace = true, features = ["reqwest"] }
http-auth-basic = { workspace = true }
pxid = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde = { workspace = true }

types = { path = "../types" }
