[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "playa"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.5"
rust-argon2 = "2.0.0"

# Workspace Dependencies
async-trait = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "mock" ] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pxid = { workspace = true }
url = { workspace = true }

# Local Dependencies
entity = { path = "../entity" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros"] }
