[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "playa"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.104"
tracing = "0.1.37"

# Workspace Dependencies
async-trait = { workspace = true }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "mock" ] }
rust-argon2 = { workspace = true }
thiserror = { workspace = true }
pxid = { workspace = true }
url = { workspace = true }

# Local Dependencies
entity = { path = "../entity" }

[dev-dependencies]
tokio = { version = "1.33.0", features = ["rt", "macros"] }
