[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "townhall"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
sea-orm = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "mock" ] }
rand = { workspace = true }
regex = { workspace = true }
rust-argon2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pxid = { workspace = true }
url = { workspace = true }

# Local Dependencies
entity = { path = "../entity" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
