[package]
name = "database"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
pxid = { workspace = true, features = ["serde"] }
sea-orm = { version = "0.11.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "mock" ] }
tracing = { workspace = true }

# Local Dependencies
core = { path = "../core" }
entity = { path = "../entity" }
migration = { path = "../migration" }

[dev-dependencies]
tokio = { workspace = true }
