[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

# Workspace Dependencies
sea-orm-migration = { workspace = true, features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }

# Local Dependencies
core = { path = "../core" }
