[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "libserver"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-graphql-axum = "5.0.7"
axum = "0.6.18"
base64 = "0.21.2"
jsonwebtoken = "8.3"
rand = "0.8.5"
rust-argon2 = "2.0.0"
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls", "fail-on-err"], default-features = false }
tower-http = { version = "0.4.1", features = ["cors"] }

# Workspace Dependencies
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
pxid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = {  workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local Dependencies
core = { path = "../core" }
