[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "libserver"
path = "src/lib.rs"

[dependencies]
async-graphql-axum = "6.0.6"
axum = "0.6.20"
base64 = "0.21.4"
jsonwebtoken = "8.3"
rand = "0.8.5"
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls", "fail-on-err"], default-features = false }
tower-http = { version = "0.4.1", features = ["cors"] }

# Workspace Dependencies
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
pxid = { workspace = true, features = ["serde"] }
rust-argon2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = {  workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local Dependencies
core = { path = "../core" }
