[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[[bin]]
name = "server"
path = "src/bin/main.rs"

[lib]
name = "libserver"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = "0.4.38"
dotenv = { workspace = true }
jsonwebtoken = { workspace = true }
pxid = { workspace = true, features = ["async-graphql", "serde"] }
rand = { workspace = true }
rust-argon2 = { workspace = true }
rust-s3 = { workspace = true, features = ["tokio-rustls-tls", "fail-on-err"], default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = {  workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local Dependencies
core = { path = "../core" }
