[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "test"
path = "src/lib.rs"

[dependencies]
fake = "2.8.0"
rand = "0.8.5"

# Workspace Dependencies
anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
pxid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

# Local Dependencies
core = { path = "../core" }
migration = { path = "../migration" }
server = { path = "../server" }
