[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "test"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = "0.4.38"
dotenv = { workspace = true }
fake = { workspace = true }
pxid = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

# Local Dependencies
core = { path = "../core" }
migration = { path = "../migration" }
server = { path = "../server" }
