[package]
name = "types"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "townhall_types"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true, features = ["serde", "wasmbind"] }
pxid = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
