[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "gabble"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.64"
chrono = { version = "0.4.26", features = ["serde"] }
lazy_static = "1.4.0"
pxid = { version = "0.1.3", features = ["serde"] }
rand = "0.8.5"
regex = "1.7.1"
rust-argon2 = "1.0.0"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
thiserror = "1.0.38"

# Workspace Dependencies
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["rt", "macros"] }
