[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
async-graphql-axum = "5.0.7"
axum = "0.6.9"
base64 = "0.21.0"
jsonwebtoken = "8.3"
tower-http = { version = "0.3.5", features = ["cors"] }

# Workspace Dependencies
async-graphql = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

# Local Dependencies
core = { path = "../core" }
database = { path = "../database" }