[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "test"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
fake = "2.6.1"
rand = "0.8.5"

# Workspace Dependencies
async-graphql = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
pxid = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

# Local Dependencies
core = { path = "../core" }
database = { path = "../database" }
server = { path = "../server" }
